--- a/index.html
+++ b/index.html
@@ -145,20 +145,13 @@
           <h2>Latest</h2>
           <ul class="latest-list">
             <li><strong>Jun 2025</strong> — <em>Three papers accepted to <strong>IEEE RO-MAN 2025</strong></em> (Eindhoven): CHARM; Demonstration Sidetracks; See What I Mean? Expressiveness & Clarity in Robot Display Design.</li>
-            <li><strong>Aug 2024</strong> — Presented at <strong>IEEE RO-MAN 2024</strong> (Pasadena): <em>How Much Progress Did I Make? An Unexplored Human Feedback Signal for Teaching Robots</em>.</li>
-            <li><strong>Oct 2023</strong> — Presented at <strong>IEEE/RSJ IROS 2023</strong> (Detroit): <em>From “Thumbs Up” to “10 out of 10”: Reconsidering Scalar Feedback in Interactive Reinforcement Learning</em>.</li>
-          </ul>
-        </section>
-
-        <section id="publications" style="margin-top:20px">
-          <h2>Selected Publications</h2>
-          <div class="items">
-            <div class="item">
-              <div class="pub-grid">
-                <div class="thumb">Upload figure<br>CHARM</div>
-                <div>
-                  <h3>CHARM: Considering Human Attributes for Reinforcement Modeling</h3>
-                  <div class="meta">Qidi Fang*, <strong>Hang Yu*</strong>, Shijie Fang, Jindan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO-MAN 2025</strong>, Eindhoven, the Netherlands.</div>
+            <li><strong>Aug 2024</strong> — Presented at <strong>IEEE RO-MAN 2024</strong> (Pasadena): <em>How Much Progress Did I M<section id="latest" style="margin-top:20px">
+          <h2>Latest</h2>
+          <ul class="latest-list">
+            <li><strong>Aug 2025</strong> — Conference: <em>See What I Mean? Expressiveness and Clarity in Robot Display Design</em>, <strong>IEEE RO‑MAN 2025</strong>.</li>
+            <li><strong>Aug 2025</strong> — Conference: <em>CHARM: Considering Human Attributes for Reinforcement Modeling</em>, <strong>IEEE RO‑MAN 2025</strong>.</li>
+            <li><strong>Aug 2025</strong> — Conference: <em>Demonstration Sidetracks: Categorizing Systematic Non‑Optimality in Human Demonstrations</em>, <strong>IEEE RO‑MAN 2025</strong>.</li>
+            <li><strong>Aug 2024</strong> — Conference: <em>How Much Progress Did I Make? An Unexploredan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO-MAN 2025</strong>, Eindhoven, the Netherlands.</div>
                   <div class="meta"><span class="muted">PDF coming soon</span></div>
                 </div>
               </div>
