--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
     .top { display: flex; align-items: center; gap: 16px; justify-content: space-between; }
     .brand { display: flex; align-items: center; gap: 14px; }
     .avatar { width: 56px; height: 56px; border-radius: 50%; background: linear-gradient(135deg,#e5e7eb,#cbd5e1); box-shadow: var(--shadow); border: 1px solid var(--border); }
+    aside.panel { grid-area: aside; }
+    .panel.main { grid-area: content; }
     .name { font-weight: 800; letter-spacing: .2px; font-size: 1.25rem; }
     .tag { color: var(--muted); font-size: .95rem; }
     nav { display: flex; flex-wrap: wrap; gap: 10px; }
     nav a { padding: 8px 12px; border-radius: 10px; border: 1px solid var(--border); background: #fff; }
 
-    main { max-width: var(--maxw); margin: 28px auto; padding: 0 20px 60px; display: grid; grid-template-columns: 1fr; gap: 26px; }
-    @media (min-width: 960px){ main { grid-template-columns: 340px 1fr; align-items: start; } }
+    main { max-width: var(--maxw); margin: 28px auto; padding: 0 20px 60px; display: grid; grid-template-columns: 1fr; grid-template-areas: "content"; gap: 26px; }
+    @media (min-width: 960px){ main { grid-template-columns: 340px 1fr; grid-template-areas: "aside content"; align-items: start; } }
 
     .panel { background: var(--panel); border: 1px solid var(--border); border-radius: var(--radius); box-shadow: var(--shadow); }
     .panel .inner { padding: 22px; }
@@ -63,7 +65,14 @@
     .footer { text-align: center; color: var(--muted); padding: 40px 0 30px; font-size: .92rem; }
 
     /* badges / callouts */
-    .callout { border: 1px dashed var(--border); padding: 14px 16px; border-radius: 12px; background: #fff; }
+    .callout { border: 1px dashed rgba(0,0,0,.14); padding: 14px 16px; border-radius: 12px; background: rgba(0,0,0,.02); }
+
+    /* publications layout */
+    .pub-grid { display: grid; grid-template-columns: 360px 1fr; gap: 18px; align-items: start; }
+    @media (max-width: 900px){ .pub-grid { grid-template-columns: 1fr; } }
+    .thumb { width: 100%; aspect-ratio: 16/10; border: 2px dashed #d0d7de; border-radius: 14px; background: #f6f8fa; display: flex; align-items: center; justify-content: center; color: #6e7781; font-size: .95rem; }
+    .thumb img { width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 0; }
+    .links a { margin-right: 10px; }
 
     /* small utilities */
     .muted { color: var(--muted); }
@@ -133,7 +142,7 @@
     </aside>
 
     <!-- Main column -->
-    <div class="panel">
+    <div class="panel main">
       <div class="inner">
         <section id="about">
           <h2>About</h2>
@@ -144,81 +153,149 @@
         <section id="latest" style="margin-top:20px">
           <h2>Latest</h2>
           <ul class="latest-list">
-            <li><strong>Jun 2025</strong> — <em>Three papers accepted to <strong>IEEE RO-MAN 2025</strong></em> (Eindhoven): CHARM; Demonstration Sidetracks; See What I Mean? Expressiveness & Clarity in Robot Display Design.</li>
-            <li><strong>Aug 2024</strong> — Presented at <strong>IEEE RO-MAN 2024</strong> (Pasadena): <em>How Much Progress Did I M<section id="latest" style="margin-top:20px">
-          <h2>Latest</h2>
-          <ul class="latest-list">
             <li><strong>Aug 2025</strong> — Conference: <em>See What I Mean? Expressiveness and Clarity in Robot Display Design</em>, <strong>IEEE RO‑MAN 2025</strong>.</li>
             <li><strong>Aug 2025</strong> — Conference: <em>CHARM: Considering Human Attributes for Reinforcement Modeling</em>, <strong>IEEE RO‑MAN 2025</strong>.</li>
             <li><strong>Aug 2025</strong> — Conference: <em>Demonstration Sidetracks: Categorizing Systematic Non‑Optimality in Human Demonstrations</em>, <strong>IEEE RO‑MAN 2025</strong>.</li>
-            <li><strong>Aug 2024</strong> — Conference: <em>How Much Progress Did I Make? An Unexploredan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO-MAN 2025</strong>, Eindhoven, the Netherlands.</div>
-                  <div class="meta"><span class="muted">PDF coming soon</span></div>
-                </div>
-              </div>
-            </div>
+            <li><strong>Aug 2024</strong> — Conference: <em>How Much Progress Did I Make? An Unexplored Human Feedback Signal for Teaching Robots</em>, <strong>IEEE RO‑MAN 2024</strong>.</li>
+            <li><strong>Oct 2023</strong> — Conference: <em>From “Thumbs Up” to “10 out of 10”: Reconsidering Scalar Feedback in Interactive Reinforcement Learning</em>, <strong>IEEE/RSJ IROS 2023</strong>.</li>
+          </ul>
+        </section>
 
+        <section id="publications" style="margin-top:20px">
+          <h2>Publications</h2>
+
+          <h3 style="margin:18px 0 8px">Conference Papers</h3>
+          <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb">Upload figure<br>Demonstration Sidetracks</div>
-                <div>
-                  <h3>Demonstration Sidetracks: Categorizing Systematic Non-Optimality in Human Demonstrations</h3>
-                  <div class="meta">Shijie Fang*, <strong>Hang Yu*</strong>, Qidi Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO-MAN 2025</strong>, Eindhoven, the Netherlands.</div>
-                  <div class="meta"><span class="muted">PDF coming soon</span></div>
-                </div>
-              </div>
-            </div>
-
-            <div class="item">
-              <div class="pub-grid">
-                <div class="thumb">Upload figure<br>Expressiveness & Clarity</div>
+                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">See What I Mean?</span></div>
                 <div>
                   <h3>See What I Mean? Expressiveness and Clarity in Robot Display Design</h3>
-                  <div class="meta">Matthew Ebisu*, <strong>Hang Yu*</strong>, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO-MAN 2025</strong>, Eindhoven, the Netherlands.</div>
-                  <div class="meta"><span class="muted">PDF coming soon</span></div>
+                  <div class="meta">Matthew Ebisu, <strong>Hang Yu</strong>, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2506.16643" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.16643" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/mattufts/huamn_Cozmo_interaction" target="_blank" rel="noopener">Code</a></div>
                 </div>
               </div>
             </div>
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb">Upload figure<br>How Much Progress</div>
+                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">CHARM</span></div>
+                <div>
+                  <h3>CHARM: Considering Human Attributes for Reinforcement Modeling</h3>
+                  <div class="meta">Qidi Fang*, <strong>Hang Yu*</strong>, Shijie Fang, Jindan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2506.13079" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.13079" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/AABL-Lab/CHARM" target="_blank" rel="noopener">Code</a></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="pub-grid">
+                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">Demonstration Sidetracks</span></div>
+                <div>
+                  <h3>Demonstration Sidetracks: Categorizing Systematic Non‑Optimality in Human Demonstrations</h3>
+                  <div class="meta">Shijie Fang*, <strong>Hang Yu*</strong>, Qidi Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2506.11262" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2506.11262" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/AABL-Lab/Human-Demonstration-Sidetracks" target="_blank" rel="noopener">Dataset/Code</a></div>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="pub-grid">
+                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">How Much Progress</span></div>
                 <div>
                   <h3>How Much Progress Did I Make? An Unexplored Human Feedback Signal for Teaching Robots</h3>
-                  <div class="meta"><strong>IEEE RO-MAN 2024</strong>, Pasadena, USA. Authors: <strong>Hang Yu</strong>, Qidi Fang, Shijie Fang, Reuben M. Aronson, Elaine S. Short.</div>
+                  <div class="meta"><strong>Hang Yu</strong>, Qidi Fang, Shijie Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2024</strong>, Pasadena, USA.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2407.06459" target="_blank" rel="noopener">arXiv</a>· <a href="https://aabl.cs.tufts.edu/papers/roman2024_hang.pdf" target="_blank" rel="noopener">PDF</a>· <a href="https://github.com/TeachingwithProgress/Non-Expert_Demonstrations" target="_blank" rel="noopener">Dataset</a></div>
                 </div>
               </div>
             </div>
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb">Upload figure<br>Scalar Feedback in IRL</div>
+                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">Scalar Feedback</span></div>
                 <div>
                   <h3>From “Thumbs Up” to “10 out of 10”: Reconsidering Scalar Feedback in Interactive Reinforcement Learning</h3>
-                  <div class="meta"><strong>IEEE/RSJ IROS 2023</strong>, Detroit, USA. Authors: <strong>Hang Yu</strong>, Reuben M. Aronson, Katherine H. Allen, Elaine S. Short.</div>
+                  <div class="meta"><strong>Hang Yu</strong>, Reuben M. Aronson, Katherine H. Allen, Elaine S. Short. <strong>IEEE/RSJ IROS 2023</strong>, Detroit, USA.</div>
+                  <div class="links"><a href="https://arxiv.org/abs/2311.10284" target="_blank" rel="noopener">arXiv</a>· <a href="https://arxiv.org/pdf/2311.10284" target="_blank" rel="noopener">PDF</a></div>
                 </div>
               </div>
             </div>
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb">Upload figure<br>PHIRL</div>
+                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">PHIRL</span></div>
                 <div>
-                  <h3>PHIRL: Progress-Heuristicized Inverse Reinforcement Learning</h3>
-                  <div class="meta"><strong>AAAI 2026</strong> (under review, phase two). Authors: <strong>Hang Yu</strong>, James Staley, Shijie Fang, Jindan Huang, Wenchang Gao, Reuben M. Aronson, E. Short.</div>
+                  <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
+                  <div class="meta"><strong>AAAI 2026</strong> (under review). Hang Yu, James Staley, Shijie Fang, Jindan Huang, Wenchang Gao, Reuben M. Aronson, Elaine S. Short.</div>
                 </div>
               </div>
             </div>
+          </div>
 
+          <h3 style="margin:22px 0 8px">Journal Publications</h3>
+          <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb">Upload figure<br>Active Feedback Learning</div>
+                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <div>
+                  <h3>Top‑K Interesting Preference Rules Mining Based on MaxClique</h3>
+                  <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>, Wei Wei. <em>Expert Systems with Applications</em> 143 (2020) 113043.</div>
+                  <div class="links"><a href="https://doi.org/10.1016/j.eswa.2019.113043" target="_blank" rel="noopener">DOI</a>· <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417419307602" target="_blank" rel="noopener">ScienceDirect</a></div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="pub-grid">
+                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <div>
+                  <h3>Contextual Preference Collaborative Measure Framework Based on Belief System</h3>
+                  <div class="meta"><strong>Hang Yu</strong>, Wei Wei, Zheng Tan, Jing‑lei Liu. <em>Computer Science (计算机科学)</em> 47(4):74–84, 2020.</div>
+                  <div class="links"><a href="https://computerjournals.net/cn/simple_view_abstract.aspx?aid=1510D19A1395533AD2A8D5AF0923A594&jid=64A12D73428C8B8DBFB978D04DFEB3C1" target="_blank" rel="noopener">Journal</a></div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="pub-grid">
+                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <div>
+                  <h3>Conditional Preference Mining Based on MaxClique</h3>
+                  <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>. <em>Journal of Computer Applications (计算机应用)</em> 37(11):3107–3114, 2017.</div>
+                  <div class="links"><a href="https://computerjournals.net/cn/simple_view_abstract.aspx?aid=F1F705A1C719906AB225E536701F0222&jid=831E194C147C78FAAFCC50BC7ADD1732" target="_blank" rel="noopener">Journal</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <h3 style="margin:22px 0 8px">Workshops & Doctoral Consortium</h3>
+          <div class="items">
+            <div class="item">
+              <div class="pub-grid">
+                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <div>
+                  <h3>Doctoral Consortium: Human‑Robot Interaction via Expressive Human Feedback</h3>
+                  <div class="meta"><strong>ICRA 2025 Doctoral Consortium</strong>.</div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="pub-grid">
+                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <div>
+                  <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
+                  <div class="meta"><strong>RSS Workshop 2025</strong>.</div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <div class="pub-grid">
+                <div class="thumb" aria-hidden="true">Upload figure</div>
                 <div>
                   <h3>Active Feedback Learning with Rich Feedback</h3>
-                  <div class="meta">In <strong>HRI ’21 Companion</strong>. Authors: <strong>Hang Yu</strong>, Elaine S. Short.</div>
+                  <div class="meta"><strong>HRI ’21 Companion</strong>.</div>
+                  <div class="links"><a href="https://dl.acm.org/doi/10.1145/3434074.3447207" target="_blank" rel="noopener">ACM DL</a></div>
                 </div>
               </div>
             </div>
-
           </div>
         </section>
 
