--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <img class="thumb" src="assets/img/papers/contextual-preference-belief.jpg" alt="Contextual Preference Collaborative Measure Framework Based on Belief System" loading="lazy">
                 <div>
                   <h3>Contextual Preference Collaborative Measure Framework Based on Belief System</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Wei Wei, Zheng Tan, Jing‑lei Liu. <em>Computer Science (计算机科学)</em> 47(4):74–84, 2020.</div>
@@ -256,7 +256,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <img class="thumb" src="assets/img/papers/conditional-preference-maxclique.jpg" alt="Conditional Preference Mining Based on MaxClique" loading="lazy">
                 <div>
                   <h3>Conditional Preference Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>. <em>Journal of Computer Applications (计算机应用)</em> 37(11):3107–3114, 2017.</div>
@@ -270,7 +270,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <img class="thumb" src="assets/img/papers/icra-dc-2025.jpg" alt="ICRA 2025 Doctoral Consortium: Human‑Robot Interaction via Expressive Human Feedback" loading="lazy">
                 <div>
                   <h3>Doctoral Consortium: Human‑Robot Interaction via Expressive Human Feedback</h3>
                   <div class="meta"><strong>ICRA 2025 Doctoral Consortium</strong>.</div>
@@ -279,7 +279,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <img class="thumb" src="assets/img/papers/phirl-rssws-2025.jpg" alt="PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning — RSS Workshop 2025" loading="lazy">
                 <div>
                   <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
                   <div class="meta"><strong>RSS Workshop 2025</strong>.</div>
