--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 
   <footer class="footer">
     <div class="wrap">
-      © <span id="y"></span> Hang Yu. Built with vanilla HTML/CSS. Theme inspired by <a href="https://haoruxue.github.io/" target="_blank" rel="noopener">Haoru Xue</a>.
+      © <span id="y"></span> Hang Yu. Built with vanilla HTML/CSS. Theme inspired by <a href="https://haoruxue.github.io/" target="_blank" rel="noopener">Hang Yu</a>.
     </div>
   </footer>
 
