Replace placeholder text with image elements

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">See What I Mean?</span></div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>See What I Mean? Expressiveness and Clarity in Robot Display Design</h3>
                   <div class="meta">Matthew Ebisu, <strong>Hang Yu</strong>, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
@@ -179,7 +179,7 @@
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">CHARM</span></div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>CHARM: Considering Human Attributes for Reinforcement Modeling</h3>
                   <div class="meta">Qidi Fang*, <strong>Hang Yu*</strong>, Shijie Fang, Jindan Huang, Qiuyu Chen, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
@@ -190,7 +190,7 @@
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">Demonstration Sidetracks</span></div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Demonstration Sidetracks: Categorizing Systematic Non‑Optimality in Human Demonstrations</h3>
                   <div class="meta">Shijie Fang*, <strong>Hang Yu*</strong>, Qidi Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
@@ -201,7 +201,7 @@
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">How Much Progress</span></div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>How Much Progress Did I Make? An Unexplored Human Feedback Signal for Teaching Robots</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Qidi Fang, Shijie Fang, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2024</strong>, Pasadena, USA.</div>
@@ -212,7 +212,7 @@
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">Scalar Feedback</span></div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>From “Thumbs Up” to “10 out of 10”: Reconsidering Scalar Feedback in Interactive Reinforcement Learning</h3>
                   <div class="meta"><strong>Hang Yu</strong>, Reuben M. Aronson, Katherine H. Allen, Elaine S. Short. <strong>IEEE/RSJ IROS 2023</strong>, Detroit, USA.</div>
@@ -223,7 +223,7 @@
 
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure<br><span class="muted">PHIRL</span></div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>PHIRL: Progress‑Heuristicized Inverse Reinforcement Learning</h3>
                   <div class="meta"><strong>AAAI 2026</strong> (under review). Hang Yu, James Staley, Shijie Fang, Jindan Huang, Wenchang Gao, Reuben M. Aronson, Elaine S. Short.</div>
@@ -236,7 +236,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Top‑K Interesting Preference Rules Mining Based on MaxClique</h3>
                   <div class="meta">Zheng Tan, Jing‑lei Liu, <strong>Hang Yu</strong>, Wei Wei. <em>Expert Systems with Applications</em> 143 (2020) 113043.</div>
@@ -288,7 +288,7 @@
             </div>
             <div class="item">
               <div class="pub-grid">
-                <div class="thumb" aria-hidden="true">Upload figure</div>
+                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
                 <div>
                   <h3>Active Feedback Learning with Rich Feedback</h3>
                   <div class="meta"><strong>HRI ’21 Companion</strong>.</div>
@@ -342,7 +342,7 @@
 
   <footer class="footer">
     <div class="wrap">
-      © <span id="y"></span> Hang Yu. Built with vanilla HTML/CSS. Theme inspired by <a href="https://haoruxue.github.io/" target="_blank" rel="noopener">Hang Yu</a>.
+      © <span id="y"></span> Hang Yu. Built with vanilla HTML/CSS. Theme inspired by <a href="https://haoruxue.github.io/" target="_blank" rel="noopener">Haoru Xue</a>.
     </div>
   </footer>
 
