--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     /* publications layout */
     .pub-grid { display: grid; grid-template-columns: 480px 1fr; gap: 18px; align-items: start; }
     @media (max-width: 900px){ .pub-grid { grid-template-columns: 1fr; } }
-    .thumb {$1aspect-ratio: 16/9; border: 2px dashed #d0d7de; border-radius: 14px; background: #f6f8fa; display: flex; align-items: center; justify-content: center; color: #6e7781; font-size: .95rem; }
+    .thumb { width: 100%; aspect-ratio: 16/9; border-radius: 14px; display: block; object-fit: cover; }
     .thumb img { width: 100%; height: 100%; object-fit: cover; border-radius: 12px; border: 0; }
     .links a { margin-right: 10px; }
 
@@ -81,10 +81,7 @@
 
     .latest-list li { margin: 6px 0; }
 
-    /* Publication layout with image placeholder */
-    .pub-grid { display: grid; grid-template-columns: 140px 1fr; gap: 14px; align-items: start; }
-    @media (max-width: 560px){ .pub-grid { grid-template-columns: 1fr; } }
-    .thumb { width: 100%; aspect-ratio: 4 / 3; border-radius: 12px; border: 1px dashed var(--border); background: repeating-linear-gradient(45deg,#f3f4f6 0 12px,#e5e7eb 12px 24px); display: grid; place-items: center; color: var(--muted); font-size: .85rem; }
+    
   </style>
 </head>
 <body>
@@ -168,7 +165,7 @@
           <div class="items">
             <div class="item">
               <div class="pub-grid">
-                <img class="thumb" src="assets/img/papers/placeholder.jpg" alt="Paper figure" loading="lazy">
+                <img class="thumb" src="assets/img/papers/afl-hri21.jpg"pg"g"s.jpg"detracks.jpg"lt="Paper figure" loading="lazy">
                 <div>
                   <h3>See What I Mean? Expressiveness and Clarity in Robot Display Design</h3>
                   <div class="meta">Matthew Ebisu, <strong>Hang Yu</strong>, Reuben M. Aronson, Elaine S. Short. <strong>IEEE RO‑MAN 2025</strong>, Eindhoven, NL.</div>
